--- a/style.css
+++ b/style.css
@@ -22,23 +22,18 @@ h1 a {
     justify-content: center;
     background-color: green;
     padding-top: 30px;
+    
 }
 
 #disc {
-    border-radius: 50%;
-    width: 600px;
-    height: 600px;
+    width: 100%;
+    height: auto;
+    max-width: 625px;
     margin: 0 auto 0 auto;
-    background-color: blue;
-}
-
-#disc span {
-    position: relative;
+    display: block;
     border-radius: 50%;
-    width: 150px;
-    height: 150px;
-    top: 300px;
-    background-color: gold;
+    background-color: blue;
+
 }
 
 #image {
@@ -48,7 +43,95 @@ h1 a {
   margin: 0 auto 0 auto;
   display: block;
   border-radius: 50%;
+  animation-name: load-img;
+  animation-duration: 3s;
 }
+
+@keyframes load-img{
+    0% { 
+        transform-origin: left;
+        transform: rotate3d(0, 0 , 1, -200deg);
+    }
+}
+
+/* #image:hover {
+    animation-name: rotate-img;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+} */
+
+/* @keyframes rotate-img{
+    0% { 
+        transform-origin: center;
+        transform: rotate3d(0, 0 , 1, -200deg);
+    }
+
+    50% {
+        transform-origin: center;
+        transform: none;
+    }
+
+    75% {
+        transform-origin: center;
+        transform: none;
+    }
+
+    100% {
+        transform-origin: center;
+        transform: none;
+    }
+} */
+
+#image:hover {
+    display: inline-block;
+    animation: like 2s 3s infinite linear;
+  }
+
+@keyframes like {
+    0% {
+      transform: rotate( 0deg );
+    }
+    10% {
+      transform: rotate( 30deg );
+    }
+    20% {
+        transform: rotate( 60deg );
+      }
+
+    30% {
+      transform: rotate( 90deg );
+    }
+
+    40% {
+      transform: rotate( 120deg );
+    }
+
+    50% {
+        transform: rotate( 150deg );
+      }
+
+    60% {
+        transform: rotate( 180deg );
+      }
+
+      70% {
+        transform: rotate( 210deg );
+      }
+
+      80% {
+        transform: rotate( 240deg );
+      }
+
+      90% {
+        transform: rotate( 270deg );
+      }
+
+
+    100% {
+        transform: rotate( 330deg );
+      }
+  };
+
 
 #img-caption {
     background-color: hotpink;
