--- a/style.css
+++ b/style.css
@@ -21,18 +21,22 @@ h1 a {
     text-align: center;
     justify-content: center;
     background-color: green;
-    padding-top: 30px;
+    padding-top: 10px;
     
 }
 
 #disc {
     width: 100%;
-    height: auto;
-    max-width: 625px;
+    height: 600px;
+    max-width: 600px;
     margin: 0 auto 0 auto;
     display: block;
     border-radius: 50%;
     background-color: blue;
+    -moz-box-shadow: inset 0 0 15px #000;
+    -webkit-box-shadow: inset 0 0 15px #000;
+    box-shadow: inset 0 0 15px #000;
+
 
 }
 
