--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Variable */
 :root {
     --primary: #9C6644;
-    --secondary: #7f5539;
+    --secondary: #928e8b;
 }
 
 /* Reset the default style  */
@@ -17,9 +17,11 @@ body {
 }
 
 #main {
+    background-image: url("https://i.pinimg.com/600x315/2f/20/87/2f2087ee4162322324c6af1ba2ff8d4b.jpg");
     background-color: var(--secondary);
     padding: 10px;
     border-radius: 1%;
+    box-shadow: 0 0 15px #000;
 }
 
 /* base style  */
@@ -37,17 +39,28 @@ body {
 
 #title-div {
     grid-area: title-div;
-    background-color: red;
+    background-color: #281D19;
     grid-column: 1/9;
     width: 100%;
     text-align: center;
     text-transform: uppercase;
+    border-radius: 25px;
+    -moz-box-shadow: inset 0 0 5px #000;
+    -webkit-box-shadow: inset 0 0 5px #000;
+    box-shadow: inset 0 0 5px #000;
+}
+
+#title-div h1 {
+    font-size: 3em;
 }
 
 #title-div a {
     text-transform: capitalize;
     text-decoration: none;
     color: white;
+    font-size: 2em;
+    font-weight: lighter;
+    font-family: classmatesRegular;
 }
 
 #subtitle-div {
@@ -82,6 +95,7 @@ body {
 #img-caption {
     text-align: justify;
     width: 400px;
+    background-color: #02223C;
 }
 
 
@@ -91,9 +105,14 @@ body {
     background-color: violet;
     grid-column: 1/9;
 }
+
 #tribute-info h3 {
     margin: 5px;
     text-transform: capitalize;
 }
-/* fonts */
 
+/* fonts */
+@font-face {
+    font-family:  classmatesRegular;
+    src: url("../fonts/ClassmatesDemoRegular.ttf");
+}
