--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-/* Variable */
+/* 40 29 25 */
+
 :root {
-    --primary: #9C6644;
-    --secondary: brown;
+    --primary: #5C3F37;
+    --secondary: #281D19;
 }
 
-/* Reset the default style  */
 li {
     list-style-type: circle;
 }
@@ -17,15 +17,11 @@ body {
 }
 
 #main {
-    /* background-image: url("https://i.pinimg.com/600x315/2f/20/87/2f2087ee4162322324c6af1ba2ff8d4b.jpg"); */
     background-color: var(--secondary);
     padding: 10px;
+    padding-top: 20px;
     border-radius: 1%;
     box-shadow: 0 0 15px #000;
-}
-
-/* base style  */
-#main {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(4, auto);
@@ -37,54 +33,77 @@ body {
     "tribute-info";
 }
 
+
 #title-div {
     grid-area: title-div;
-    background-color: #281D19;
     grid-column: 1/9;
-    width: 100%;
-    text-align: center;
-    text-transform: uppercase;
+    background-color: #5C3F37;
     border-radius: 25px;
-    -moz-box-shadow: inset 0 0 5px #000;
     -webkit-box-shadow: inset 0 0 5px #000;
+    -moz-box-shadow: inset 0 0 5px #000;
     box-shadow: inset 0 0 5px #000;
+    padding: 10px 10px 40px 10px;
 }
 
-#title-div h1 {
-    font-size: 3em;
+h1 {
+    font-size: 4em;
+    font-family: sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    margin: 5px auto;
+    font-weight: bold;
+    padding-top: 15px;
+
 }
 
-#title-div a {
+
+#title {
+    background: var(--secondary); 
+    color: transparent;
+    text-shadow: rgba(94, 68, 59, 0.4) 3px 5px 6px; 
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+
+} 
+
+#pro {
     text-transform: capitalize;
-    text-decoration: none;
-    color: white;
-    font-size: 2em;
-    font-weight: lighter;
-    font-family: classmatesRegular;
+    font-family:  classmate;
+    font-size: 1em;
 }
 
 #subtitle-div {
     position: absolute;
-    top: 235px;
-    left: 205px;
+    top: 205px;
+    left: 220px;
     grid-area: subtitle-div;
-    /* background-image: url("https://i.pinimg.com/600x315/2f/20/87/2f2087ee4162322324c6af1ba2ff8d4b.jpg"); */
-    background-color: inherit;
+    background-color: #281D19;
     grid-column: 1/9;
     text-align: center;
-    text-transform: capitalize;
     border-radius: 15px 25px 0 0;
     padding: 0 10px;
-    box-shadow: 0 -2px 1px #000;
+    -webkit-box-shadow: 0 -2px 2px #000;
+     -moz-box-shadow: 0 -2px 2px  #000;
+          box-shadow: 0 -2px 2px  #000;
+}
+
+h3 {
+    color: var(--primary);
+    font-variant: small-caps;
 }
 
 #img-div {
     grid-area: img-div;
-    background-color: blue;
+    width: 500px;
+    background-color: var(--primary);
     grid-column: 1/9;
     text-align: center;
+    border-radius: 25px;
+    box-shadow: inset 0 0 1px #000;
+    padding: 10px 10px 40px 10px;
+    justify-self: center;
 }
-
 
 #img-div figure {
     display: inline-block;
@@ -93,32 +112,36 @@ body {
 #image {
     width: 100%;
     height: auto;
-    max-width: 400px;
+    max-width: 568px;
     margin: 0 auto 0 auto;
     display: block;
+    border-radius: 20px;
   }
 
-#img-caption {
+  #img-caption {
     text-align: justify;
     width: 400px;
     background-color: #02223C;
 }
 
-
 #tribute-info {
     grid-area: tribute-info;
     width: 100%;
-    background-color: violet;
+    background-color: var(--primary);
     grid-column: 1/9;
+    border-radius: 25px;
 }
 
 #tribute-info h3 {
+    color: white;
     margin: 5px;
     text-transform: capitalize;
 }
 
-/* fonts */
+
+
+
 @font-face {
-    font-family:  classmatesRegular;
+    font-family:  classmate;
     src: url("../fonts/ClassmatesDemoRegular.ttf");
 }
