--- a/css/style.css
+++ b/css/style.css
@@ -10,60 +10,54 @@ li {
 }
 
 body {
-    margin: 50px;
-    padding: 20px;
     overflow-x: hidden;
-    color: white;
+    background-color: var(--primary);
 }
 
 #main {
+    display: grid;
+    margin: auto;
+    max-width: 1000px;
     background-color: var(--secondary);
     padding: 30px;
-    border-radius: 1%;
-    box-shadow: 0 0 15px #000;
-    display: grid;
+    box-shadow: 0 0 15px var(--secondary);
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(4, auto);
-    gap: 5px;
     grid-template-areas: 
     "title-div"
     "subtitle-div"
     "img-div"
     "tribute-info";
+    border-radius: 25px; 
+    justify-items: center;   
 }
 
 
 #title-div {
     grid-area: title-div;
     grid-column: 1/9;
-    background-color: #5C3F37;
+    background-color: var(--primary);
     border-radius: 25px;
-    -webkit-box-shadow: inset 0 0 5px #000;
-    -moz-box-shadow: inset 0 0 5px #000;
-    box-shadow: inset 0 0 5px #000;
-    padding: 10px 10px 40px 10px;
+    -webkit-box-shadow: inset 0 0 21px var(--secondary);
+    -moz-box-shadow: inset 0 0 21px var(--secondary);
+    box-shadow: inset 0 0 21px var(--secondary);
+    padding: 30px 25px;
 }
 
-h1 {
-    font-size: 4em;
+#title {
+    font-size: 5em;
     font-family: sans-serif;
     text-transform: uppercase;
     text-align: center;
-    margin: 5px auto;
+    margin: 1px;
     font-weight: bold;
     padding-top: 15px;
-
-}
-
-
-#title {
     background: var(--secondary); 
     color: transparent;
     text-shadow: rgba(94, 68, 59, 0.4) 3px 5px 6px; 
     -webkit-background-clip: text;
     -moz-background-clip: text;
     background-clip: text;
-
 } 
 
 #pro {
@@ -73,28 +67,29 @@ h1 {
 }
 
 #subtitle-div {
-    position: absolute;
-    top: 215px;
-    left: 220px;
+    position: relative;
+    top: -55px;
     grid-area: subtitle-div;
     background-color: #281D19;
     grid-column: 1/9;
     text-align: center;
-    border-radius: 15px 25px 0 0;
+    border-radius: 25px 25px 0 0;
     padding: 0 10px;
     -webkit-box-shadow: 0 -2px 2px #000;
      -moz-box-shadow: 0 -2px 2px  #000;
           box-shadow: 0 -2px 2px  #000;
 }
 
-h3 {
+#subtitle-div h3 {
     color: var(--primary);
     font-variant: small-caps;
 }
 
 #img-div {
+    position: relative;
+    top: -33px;
+    width: 970px;
     grid-area: img-div;
-    width: 500px;
     background-color: var(--primary);
     grid-column: 1/9;
     text-align: center;
@@ -102,6 +97,9 @@ h3 {
     box-shadow: inset 0 0 1px #000;
     padding: 10px 10px 40px 10px;
     justify-self: center;
+    -webkit-box-shadow: inset 0 0 21px var(--secondary);
+    -moz-box-shadow: inset 0 0 21px var(--secondary);
+    box-shadow: inset 0 0 21px var(--secondary);
 }
 
 #img-div figure {
@@ -118,25 +116,47 @@ h3 {
   }
 
   #img-caption {
-    text-align: justify;
-    width: 400px;
-    background-color: #02223C;
+      position: absolute;
+      top: 765px;
+      left: 300px;
+      height: 90px;
+      text-align: justify;
+      color: var(--primary);
+      max-width: 365.8px;
+      background-color: #281D19;
+      grid-column: 1/9;
+      border-radius: 25px;
+      padding: 15px 15px;
+      -webkit-box-shadow: 0 -2px 2px #000;
+      -moz-box-shadow: 0 -2px 2px  #000;
+      box-shadow: 0 -2px 2px  #000;
 }
 
 #tribute-info {
+    
+    display: inline;
     grid-area: tribute-info;
-    width: 100%;
+    width: 450px;
+    color:var(--secondary);
     background-color: var(--primary);
     grid-column: 1/9;
+    justify-self: center;
     border-radius: 25px;
 }
 
 #tribute-info h3 {
-    color: white;
+    text-align: center;
+    font-size: 2em;
     margin: 5px;
     text-transform: capitalize;
 }
 
+#tribute-info a {
+    position: absolute;
+    text-decoration: none;
+    font-variant: small-caps;
+    z-index: 1;
+}
 
 
 
