--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,6 @@ body {
 #img-div {
     position: relative;
     top: -33px;
-    width: 970px;
     grid-area: img-div;
     background-color: var(--primary);
     grid-column: 1/9;
@@ -100,6 +99,7 @@ body {
     -webkit-box-shadow: inset 0 0 21px var(--secondary);
     -moz-box-shadow: inset 0 0 21px var(--secondary);
     box-shadow: inset 0 0 21px var(--secondary);
+    height: 650px;
 }
 
 #img-div figure {
@@ -110,37 +110,35 @@ body {
     width: 100%;
     height: auto;
     max-width: 568px;
-    margin: 0 auto 0 auto;
+    margin: 0 auto;
     display: block;
     border-radius: 20px;
+    /* -webkit-box-shadow: 0 0 21px var(--secondary);
+    -moz-box-shadow:  0 0 21px var(--secondary); */
+    box-shadow:  0 5px 21px var(--secondary);
+    
   }
 
-  #img-caption {
-      position: absolute;
-      top: 765px;
-      left: 300px;
-      height: 90px;
+  #img-caption { 
+      margin: auto;
       text-align: justify;
       color: var(--primary);
-      max-width: 365.8px;
+      max-width: 470px;
       background-color: #281D19;
       grid-column: 1/9;
-      border-radius: 25px;
+      border-radius: 0 0 25px 25px;
       padding: 15px 15px;
-      -webkit-box-shadow: 0 -2px 2px #000;
-      -moz-box-shadow: 0 -2px 2px  #000;
-      box-shadow: 0 -2px 2px  #000;
+      /* -webkit-box-shadow: 0 -2px 12px #000;
+      -moz-box-shadow: 0 -2px 2px  #000; */
+      box-shadow: 0 2px 2px  #000;
 }
 
 #tribute-info {
-    
-    display: inline;
     grid-area: tribute-info;
     width: 450px;
     color:var(--secondary);
     background-color: var(--primary);
     grid-column: 1/9;
-    justify-self: center;
     border-radius: 25px;
 }
 
@@ -152,13 +150,11 @@ body {
 }
 
 #tribute-info a {
-    position: absolute;
+    
+    color:var(--secondary);
     text-decoration: none;
     font-variant: small-caps;
-    z-index: 1;
 }
-
-
 
 @font-face {
     font-family:  classmate;
