--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,9 @@ body {
     background-color: var(--primary);
     grid-column: 1/9;
     border-radius: 25px;
+    -webkit-box-shadow: inset 0 0 21px var(--secondary);
+    -moz-box-shadow: inset 0 0 21px var(--secondary);
+    box-shadow: inset 0 0 21px var(--secondary);
 }
 
 #tribute-info h3 {
