--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ li {
 }
 
 body {
+    margin: 10px;
     overflow-x: hidden;
     background-color: var(--primary);
 }
@@ -17,7 +18,7 @@ body {
 #main {
     display: grid;
     margin: auto;
-    max-width: 1000px;
+    width: 650px;
     background-color: var(--secondary);
     padding: 30px;
     box-shadow: 0 0 15px var(--secondary);
@@ -41,11 +42,11 @@ body {
     -webkit-box-shadow: inset 0 0 21px var(--secondary);
     -moz-box-shadow: inset 0 0 21px var(--secondary);
     box-shadow: inset 0 0 21px var(--secondary);
-    padding: 30px 25px;
+    padding: 10px 25px 30px 25px;
 }
 
 #title {
-    font-size: 5em;
+    font-size: 3em;
     font-family: sans-serif;
     text-transform: uppercase;
     text-align: center;
@@ -63,12 +64,13 @@ body {
 #pro {
     text-transform: capitalize;
     font-family:  classmate;
-    font-size: 1em;
+    font-size: 1.1em;
 }
 
 #subtitle-div {
     position: relative;
-    top: -55px;
+    top: -48px;
+    height: auto;
     grid-area: subtitle-div;
     background-color: #281D19;
     grid-column: 1/9;
@@ -76,11 +78,12 @@ body {
     border-radius: 25px 25px 0 0;
     padding: 0 10px;
     -webkit-box-shadow: 0 -2px 2px #000;
-     -moz-box-shadow: 0 -2px 2px  #000;
-          box-shadow: 0 -2px 2px  #000;
+    -moz-box-shadow: 0 -2px 2px  #000;
+    box-shadow: 0 -2px 2px  #000;
 }
 
 #subtitle-div h3 {
+    font-size: 1em;
     color: var(--primary);
     font-variant: small-caps;
 }
@@ -113,8 +116,8 @@ body {
     margin: 0 auto;
     display: block;
     border-radius: 20px;
-    /* -webkit-box-shadow: 0 0 21px var(--secondary);
-    -moz-box-shadow:  0 0 21px var(--secondary); */
+    -webkit-box-shadow: 0 5px 21px var(--secondary);
+    -moz-box-shadow:  0 5px 21px var(--secondary);
     box-shadow:  0 5px 21px var(--secondary);
     
   }
@@ -128,8 +131,8 @@ body {
       grid-column: 1/9;
       border-radius: 0 0 25px 25px;
       padding: 15px 15px;
-      /* -webkit-box-shadow: 0 -2px 12px #000;
-      -moz-box-shadow: 0 -2px 2px  #000; */
+      -webkit-box-shadow: 0 2px 2px #000;
+      -moz-box-shadow: 0 2px 2px  #000;
       box-shadow: 0 2px 2px  #000;
 }
 
